# clang-unformat

./: .clang-format  .gitignore  CMakeLists.txt  README.md
standalone/: application.cpp  application.hpp  clang_format.cpp  cli_config.cpp  levenshtein.cpp
